--- a/AppTap/css/style.css
+++ b/AppTap/css/style.css
@@ -157,6 +157,19 @@ html, body {
     button:hover {
     background: #5412eed5;
     }
+    button {
+    width: 150px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px; 
+    background: #5412eed5;
+    font-size: 16px;
+    color: #fff;
+    cursor: pointer;
+    }
+    button:hover {
+    background: #5412eed5;
+    }
     @media (min-width: 568px) {
     .name-item, .city-item {
     display: flex;
@@ -169,4 +182,14 @@ html, body {
     .city-item select {
     width: calc(50% - 8px);
     }
+    }
+    h2 {
+        color: #000000;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align:center;
+    }
+    span{
+        position:relative;
+        top:1px;
+        display:inline-block;
     }
