--- a/AppTap/css/style.css
+++ b/AppTap/css/style.css
@@ -184,8 +184,9 @@ html, body {
     }
     }
     h2 {
-        color: #000000;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align:center;
+    }
+    h3 {
         text-align:center;
     }
     span{
